--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/teste_estagio
-spring.datasource.username=developer
+spring.datasource.url=jdbc:mysql://localhost:3306/bancoteste
+spring.datasource.username=root
 spring.datasource.password=123456789
 
 spring.jpa.hibernate.ddl-auto=update
